<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_16sdp"

    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/ll_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@color/bgcolor_cardrv"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movie_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="gone" />


        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_gravity="center"
            android:theme="@style/progressStyle" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/movie_year"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_8ssp"
            android:alpha="0.50"
            android:fontFamily="@font/textfontstyle_bold"
            android:gravity="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:visibility="gone"

            tools:text="@string/defaultyear" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:background="@drawable/bg_overly"
            android:gravity="bottom|center|start"
            android:orientation="vertical">


            <TextView

                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/textfontstyle_bold"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/defaulttitle" />

            <TextView
                android:id="@+id/movie_desc"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:ellipsize="end"
                android:fontFamily="@font/textfontstyle"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone"
                tools:text="@string/defaultdesc" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>