<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <!--appbar layout-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_toolbar_bg"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        app:elevation="0dp"
        android:id="@+id/app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">




                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:layout_weight="1"
                    android:fontFamily="@font/titlefontstyle"
                    android:gravity="center|start"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/title_main"
                    android:textColor="@color/logo_title_color"
                    android:textSize="@dimen/_27sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:layout_margin="@dimen/_6sdp"
                    android:gravity="end|center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/saved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/saved"
                        app:tint="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:layout_margin="@dimen/_6sdp"
                    android:gravity="end|center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/scanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/scanner"
                        app:tint="@color/white" />

                </LinearLayout>


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/here"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app"
        app:layout_constraintBottom_toTopOf="@+id/nv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toBottomOf="@id/here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/bgcolor_cardrv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/nv">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/movies_tabbar"
            android:id="@+id/movies"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/textfontstyle"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/tv_series_tabbar"
            android:id="@+id/series"
            android:gravity="center"
            android:fontFamily="@font/textfontstyle"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:layout_weight="1"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
