<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.SavedMovies">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_toolbar_bg"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:id="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:layout_margin="@dimen/_6sdp"
                    android:gravity="start|center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/backbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_back"
                        app:tint="@color/white" />

                </LinearLayout>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:layout_weight="1"
                    android:fontFamily="@font/textfontstyle_regular"
                    android:gravity="center|start"
                    android:text="@string/fav_section"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:layout_margin="@dimen/_6sdp"
                    android:gravity="end|center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/scanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/scanner"
                        app:tint="@color/white" />

                </LinearLayout>


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        android:id="@+id/searchCard"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardBackgroundColor="@color/bgcolor_cardrv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/search"
                android:background="@null"
                android:drawableStart="@drawable/search"
                android:drawableTint="#FFF"
                android:id="@+id/search"
                android:inputType="text"
                android:layout_weight="2"
                android:paddingStart="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:fontFamily="@font/textfontstyle"
                android:textColorHint="#BDBABA"
                android:textColor="#FFFF"/>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:background="@color/common_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:scrollbars="vertical"
            android:id="@+id/rv"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/noData"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:visibility="gone"
            android:text="@string/favorite_empty"
            android:fontFamily="@font/textfontstyle_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>